Completed home page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link href="portfolio.html" />
     <title>Dakotah Ducharme</title>
 </head>
+
 <body>
     <nav>
-        <h1> < dakotah ducharme /> </h1> 
+        <h1><a href="./index.html"> < dakotah ducharme /></a> </h1> 
         <ul>
             <li><a class="nav-link" href="https://github.com/dakotahducharme">github</a></li>
             <li><a href="https://twitter.com/jqueery">twitter</a></li>
@@ -21,65 +22,33 @@
         </ul>
     </nav>
     <div id="container">
-        <div id="bio">
+        <div class="bio" id="bio_pic" >
+            <img src="https://pbs.twimg.com/media/FHojO4lVkAEauw6?format=jpg&name=small" />
+        </div>
+        <div class="bio" id="intro">
+            <h3>Hi, I'm Dakotah 👋</h3>
             <p>
+               I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
+               sustainability, and accessibility. In addition to software, I'm a big fan of vegan food, cute animals, 
+               video games, and classic literature. I love to learn new skills, and take on new challenges. I'll
+               definitely be guilty of trying to talk your ear off about my latest javascript project, or my current favorite metal album.
+            </p>
+        </div>
+        <!-- <div class="bio">
+             <p>
                 Go into a room to decide you didn't want to be in there anyway
                 Cough hairball on conveniently placed pants love me! meeeeouw for stare out the window. 
                 Cough hairball on conveniently placed pants cat walks in keyboard. 
                 Weigh eight pounds but take up a full-size bed paw your face to wake you up in the morning. 
                 Meow all night one of these days i'm going to get that red dot, just you wait and see somehow manage to 
                 catch a bird but have no idea what to do next, so play with it until it dies of shock, and murf pratt 
-                ungow ungow or poop on the floor, break a planter, sprint, eat own hair, vomit hair, hiss, chirp at birds, 
-                eat a squirrel, hide from fireworks, lick toe beans, attack christmas tree for eat the fat cats food, i is 
-                playing on your console hooman. Spread kitty litter all over house scoot butt on the rug chase after silly 
-                colored fish toys around the house making sure that fluff gets into the owner's eyes so sit on human or rub 
-                face on owner. Lie on your belly and purr when you are asleep poop on floor and watch human clean up. Climb 
-                leg love and coo around boyfriend who purrs and makes the perfect moonlight eyes so i can purr and swat the 
-                glittery gleaming yarn to him (the yarn is from a $125 sweater) proudly present butt to human. Sleep purr 
-                like an angel mew mew and lick sellotape. Sugar, my siamese, stalks me (in a good way), day and night sit 
-                in window and stare oooh, a bird, yum. Twitch tail in permanent irritation lick yarn hanging out of own butt 
-                get suspicious of own shadow then go play with toilette paper and if it fits, i sits so cat jumps and falls 
-                onto the couch purrs and wakes up in a new dimension filled with kitty litter meow meow yummy there is a 
-                bunch of cats hanging around eating catnip or missing until dinner time. Ooooh feather moving feather!.
-                 Why can't i catch that stupid red dot lasers are tiny mice for i can haz, blow up sofa in 3 seconds, or the
-                 fat cat sat on the mat bat away with paws, stares at human while pushing stuff off a table decide to want 
-                 nothing to do with my owner today. I show my fluffy belly but it's a trap! if you pet it i will tear up your
-                  hand kitty kitty and ignore the squirrels, you'll never catch them anyway or your pillow is now my pet bed. 
-                  Have a lot of grump in yourself because you can't forget to be grumpy and not be like king grumpy cat good 
-                  now the other hand, too.
-            </p>
-        </div>
-        <div id="links">
-            <p>
-                Go into a room to decide you didn't want to be in there anyway
-                Cough hairball on conveniently placed pants love me! meeeeouw for stare out the window. 
-                Cough hairball on conveniently placed pants cat walks in keyboard. 
-                Weigh eight pounds but take up a full-size bed paw your face to wake you up in the morning. 
-                Meow all night one of these days i'm going to get that red dot, just you wait and see somehow manage to 
-                catch a bird but have no idea what to do next, so play with it until it dies of shock, and murf pratt 
-                ungow ungow or poop on the floor, break a planter, sprint, eat own hair, vomit hair, hiss, chirp at birds, 
-                eat a squirrel, hide from fireworks, lick toe beans, attack christmas tree for eat the fat cats food, i is 
-                playing on your console hooman. Spread kitty litter all over house scoot butt on the rug chase after silly 
-                colored fish toys around the house making sure that fluff gets into the owner's eyes so sit on human or rub 
-                face on owner. Lie on your belly and purr when you are asleep poop on floor and watch human clean up. Climb 
-                leg love and coo around boyfriend who purrs and makes the perfect moonlight eyes so i can purr and swat the 
-                glittery gleaming yarn to him (the yarn is from a $125 sweater) proudly present butt to human. Sleep purr 
-                like an angel mew mew and lick sellotape. Sugar, my siamese, stalks me (in a good way), day and night sit 
-                in window and stare oooh, a bird, yum. Twitch tail in permanent irritation lick yarn hanging out of own butt 
-                get suspicious of own shadow then go play with toilette paper and if it fits, i sits so cat jumps and falls 
-                onto the couch purrs and wakes up in a new dimension filled with kitty litter meow meow yummy there is a 
-                bunch of cats hanging around eating catnip or missing until dinner time. Ooooh feather moving feather!.
-                 Why can't i catch that stupid red dot lasers are tiny mice for i can haz, blow up sofa in 3 seconds, or the
-                 fat cat sat on the mat bat away with paws, stares at human while pushing stuff off a table decide to want 
-                 nothing to do with my owner today. I show my fluffy belly but it's a trap! if you pet it i will tear up your
-                  hand kitty kitty and ignore the squirrels, you'll never catch them anyway or your pillow is now my pet bed. 
-                  Have a lot of grump in yourself because you can't forget to be grumpy and not be like king grumpy cat good 
-                  now the other hand, too.
-            </p>
-        </div>
+                </p>
+        </div> -->
     </div>
+
     <footer>
         made with ❤️ by Dakotah Ducharme
     </footer>
+
 </body>
 </html>
