--- a/experience.html
+++ b/experience.html
@@ -20,12 +20,12 @@
             <li><a href="./experience.html">experience</a></li>
         </ul>
     </nav>
-    <div id="container">
-        <div class="bio" id="bio_pic" >
-            <img src="https://pbs.twimg.com/media/FHojO4lVkAEauw6?format=jpg&name=small" />
-        </div>
-        <div class="bio" id="intro">
-            <h3>Hi, I'm Dakotah 👋</h3>
+    <h1>Industry Experience</h1>
+ 
+   <div id="exp-container">
+       <div class="experience">
+            <h3>American Express</h3>
+            <h4>Software Engineer Apprentice</h4>
             <p>
                I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
                sustainability, and accessibility. In addition to software, I'm a big fan of vegan food, cute animals, 
@@ -33,7 +33,9 @@
                definitely be guilty of trying to talk your ear off about my latest javascript project, or my current favorite metal album.
             </p>
         </div>
-        <!-- <div class="bio">
+        <div class="experience">
+            <h3>University of California, Berkeley</h3>
+            <h4>Teaching Assistant</h4>
              <p>
                 Go into a room to decide you didn't want to be in there anyway
                 Cough hairball on conveniently placed pants love me! meeeeouw for stare out the window. 
@@ -42,7 +44,7 @@
                 Meow all night one of these days i'm going to get that red dot, just you wait and see somehow manage to 
                 catch a bird but have no idea what to do next, so play with it until it dies of shock, and murf pratt 
                 </p>
-        </div> -->
+        </div>
     </div>
 
     <footer>
