--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Dakotah Ducharme</title>
 </head>
+
 <body>
-    
+    <nav>
+        <h1><a href="./index.html"> < dakotah ducharme /></a> </h1> 
+        <ul>
+            <li><a href="./about.html">about</a></li>
+            <li><a href="./projects.html">portfolio</a></li>
+            <li><a href="./experience.html">experience</a></li>
+        </ul>
+    </nav>
+    <div id="container">
+        <div class="bio" id="bio_pic" >
+            <img src="https://pbs.twimg.com/media/FHojO4lVkAEauw6?format=jpg&name=small" />
+        </div>
+        <div class="bio" id="intro">
+            <h3>Hi, I'm Dakotah 👋</h3>
+            <p>
+               I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
+               sustainability, and accessibility. In addition to software, I'm a big fan of vegan food, cute animals, 
+               video games, and classic literature. I love to learn new skills, and take on new challenges. I'll
+               definitely be guilty of trying to talk your ear off about my latest javascript project, or my current favorite metal album.
+            </p>
+        </div>
+        <!-- <div class="bio">
+             <p>
+                Go into a room to decide you didn't want to be in there anyway
+                Cough hairball on conveniently placed pants love me! meeeeouw for stare out the window. 
+                Cough hairball on conveniently placed pants cat walks in keyboard. 
+                Weigh eight pounds but take up a full-size bed paw your face to wake you up in the morning. 
+                Meow all night one of these days i'm going to get that red dot, just you wait and see somehow manage to 
+                catch a bird but have no idea what to do next, so play with it until it dies of shock, and murf pratt 
+                </p>
+        </div> -->
+    </div>
+
+    <footer>
+        made with ❤️ by Dakotah Ducharme
+        <ul>
+            <li><a class="nav-link" href="https://github.com/dakotahducharme">github</a></li>
+            <li><a href="https://twitter.com/jqueery">twitter</a></li>
+            <li><a href="https://linkedin.com/in/devdbd/">linkedin</a></li>
+        </ul>
+    </footer>
+
 </body>
 </html>
