Adjustments to education made

--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
             <li><a href="./experience.html">experience</a></li>
         </ul>
     </nav>
-    <div id="container">
-        <div class="bio" id="bio_pic" >
-            <img src="https://pbs.twimg.com/media/FHojO4lVkAEauw6?format=jpg&name=small" />
-        </div>
-        <div class="bio" id="intro">
+    <div id="index-container">
+        <div id="home">
             <h3>Hi, I'm Dakotah 👋</h3>
             <p>
                I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
