--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@
             <li><a href="./experience.html">experience</a></li>
         </ul>
     </nav>
+    <h1>Portfolio</h1>
     <div id="container">
         <div class="bio" id="bio_pic" >
             <img src="https://pbs.twimg.com/media/FHojO4lVkAEauw6?format=jpg&name=small" />
