--- a/about.html
+++ b/about.html
@@ -20,20 +20,22 @@
             <li><a href="./experience.html">experience</a></li>
         </ul>
     </nav>
+    <h1>About Me</h1>
     <div id="container">
         <div class="bio" id="bio_pic" >
             <img src="https://pbs.twimg.com/media/FHojO4lVkAEauw6?format=jpg&name=small" />
         </div>
         <div class="bio" id="intro">
-            <h3>Hi, I'm Dakotah 👋</h3>
+            <h3>Dakotah Ducharme</h3>
+            <h4>they/them/theirs</h4>
             <p>
-               I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
-               sustainability, and accessibility. In addition to software, I'm a big fan of vegan food, cute animals, 
-               video games, and classic literature. I love to learn new skills, and take on new challenges. I'll
-               definitely be guilty of trying to talk your ear off about my latest javascript project, or my current favorite metal album.
+               My name is Dakotah, and I'm a software engineer who's passionate about all things tech. While that may sound like the cliche
+               bio of every engineer, I really, truly, mean that. I began my engineering journey in high school, where I co-founded a 
+               drone program with my friends. When we competed in drone competitions, we knew we could score extra points if we programmed
+               the drones to fly autonomously. Fast forward
             </p>
         </div>
-        <!-- <div class="bio">
+        <div class="bio">
              <p>
                 Go into a room to decide you didn't want to be in there anyway
                 Cough hairball on conveniently placed pants love me! meeeeouw for stare out the window. 
@@ -42,7 +44,7 @@
                 Meow all night one of these days i'm going to get that red dot, just you wait and see somehow manage to 
                 catch a bird but have no idea what to do next, so play with it until it dies of shock, and murf pratt 
                 </p>
-        </div> -->
+        </div>
     </div>
 
     <footer>
