I am going to throw my keyboard across the room

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         </ul>
     </nav>
     <div id="index-container">
+        <!-- <div id="img-index">
+            <img src="spain3.jpeg" alt="spain" />
+            <!-- <img src="spain2.jpeg" />
+            <img src="spain1.jpeg" />
+            <img src="spain4.jpeg" alt=""> -->
+        </div> -->
         <div id="home">
             <h3>Hi, I'm Dakotah 👋</h3>
             <p>
