--- a/projects.html
+++ b/projects.html
@@ -20,40 +20,60 @@
             <li><a href="./experience.html">experience</a></li>
         </ul>
     </nav>
-    <h1>Portfolio</h1>
-    <div id="container">
-        <div class="bio" id="bio_pic" >
-            <img src="https://pbs.twimg.com/media/FHojO4lVkAEauw6?format=jpg&name=small" />
+    <div class="container">
+        <h1 id="portfolio-h1">Portfolio</h1>
+            <div id="portfolio-layout">
+                <div class="project-info">
+                    <h3><a href="https://mix-me-react.herokuapp.com/">Mix-Me</a></h3>
+                    <p> Mix me description</p>
+                    <div>
+                        <a href="https://mix-me-react.herokuapp.com/"><img class="project-image" src="./mix-me.png" /></a>
+                    </div>
+                </div>
+                <div class="project-info">
+                    <h3><a href="https://dakotahducharme.github.io/MemoryGame/">Memory Game</a></h3>
+                    <p> memory game description </p>
+                        <div>
+                            <a href="https://dakotahducharme.github.io/MemoryGame/">
+                            <img src="./memory-game.png"class="project-image"/></a>
+                        </div>
+                </div> 
+                <div class="project-info">
+                    <h3><a href="https://dakotahducharme.github.io/Snowglobe/">Snowglobe</a></h3>
+                    <p> snowglobe description </p>
+                        <div>
+                            <a href="https://dakotahducharme.github.io/Snowglobe/">
+                            <img src="./snowglobe.png"class="project-image"/></a>
+                        </div>
+                </div>
+                <div class="project-info">
+                    <h3><a href="https://dakotahducharme.github.io/p5-example/">Canvas of circles</a></h3>
+                    <p> p5 description </p>
+                        <div>
+                            <a href="https://dakotahducharme.github.io/p5-example/">
+                            <img src="./p5-circles.png"class="project-image"/></a>
+                        </div>
+                </div>
+                <div class="project-info">
+                    <h3><a href="https://pages.git.generalassemb.ly/dakotahducharme/project-one/index.html">Pokawaii</a></h3>
+                    <p> pokawaii description </p>
+                        <div>
+                            <a href="https://pages.git.generalassemb.ly/dakotahducharme/project-one/index.html">
+                            <img src="./pokawaii.png"class="project-image"/></a>
+                        </div>
+                </div>
+            </div>
         </div>
-        <div class="bio" id="intro">
-            <h3>Hi, I'm Dakotah 👋</h3>
-            <p>
-               I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
-               sustainability, and accessibility. In addition to software, I'm a big fan of vegan food, cute animals, 
-               video games, and classic literature. I love to learn new skills, and take on new challenges. I'll
-               definitely be guilty of trying to talk your ear off about my latest javascript project, or my current favorite metal album.
-            </p>
-        </div>
-        <!-- <div class="bio">
-             <p>
-                Go into a room to decide you didn't want to be in there anyway
-                Cough hairball on conveniently placed pants love me! meeeeouw for stare out the window. 
-                Cough hairball on conveniently placed pants cat walks in keyboard. 
-                Weigh eight pounds but take up a full-size bed paw your face to wake you up in the morning. 
-                Meow all night one of these days i'm going to get that red dot, just you wait and see somehow manage to 
-                catch a bird but have no idea what to do next, so play with it until it dies of shock, and murf pratt 
-                </p>
-        </div> -->
-    </div>
 
-    <footer>
-        made with ❤️ by Dakotah Ducharme
-        <ul>
-            <li><a class="nav-link" href="https://github.com/dakotahducharme">github</a></li>
-            <li><a href="https://twitter.com/jqueery">twitter</a></li>
-            <li><a href="https://linkedin.com/in/devdbd/">linkedin</a></li>
-        </ul>
-    </footer>
+        <footer>
+            made with ❤️ by Dakotah Ducharme
+            <ul>
+                <li><a class="nav-link" href="https://github.com/dakotahducharme">github</a></li>
+                <li><a href="https://twitter.com/jqueery">twitter</a></li>
+                <li><a href="https://linkedin.com/in/devdbd/">linkedin</a></li>
+            </ul>
+        </footer>
+    </div>
 
 </body>
 </html>
