--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <h1><a href="./index.html"> < dakotah ducharme /></a> </h1> 
+        <h1 id="nav-h1"><a href="./index.html"> < dakotah ducharme /></a> </h1> 
         <ul>
             <li><a href="./about.html">about</a></li>
             <li><a href="./projects.html">portfolio</a></li>
@@ -21,21 +21,16 @@
         </ul>
     </nav>
     <div id="index-container">
-        <!-- <div id="img-index">
-            <img src="spain3.jpeg" alt="spain" />
-            <!-- <img src="spain2.jpeg" />
-            <img src="spain1.jpeg" />
-            <img src="spain4.jpeg" alt=""> -->
-        </div> -->
+        <h1 id="name">Hi, I'm Dakotah 👋</h1>
         <div id="home">
-            <h3>Hi, I'm Dakotah 👋</h3>
             <p>
-               I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
-               sustainability, and accessibility. In addition to software, I'm a big fan of vegan food, cute animals, 
-               video games, and classic literature. I love to learn new skills, and take on new challenges. I'll
-               definitely be guilty of trying to talk your ear off about my latest javascript project, or my current favorite metal album.
+            I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
+            sustainability, and accessibility. In addition to software, I'm a big fan of vegan food, cute animals, 
+            video games, and classic literature. I love to learn new skills, and take on new challenges. I'll
+            definitely be guilty of trying to talk your ear off about my latest javascript project, or my current favorite metal album.
             </p>
         </div>
+       
         <!-- <div class="bio">
              <p>
                 Go into a room to decide you didn't want to be in there anyway
