--- a/projects.html
+++ b/projects.html
@@ -24,14 +24,14 @@
         <h1 id="portfolio-h1">Portfolio</h1>
             <div id="portfolio-layout">
                 <div class="project-info">
-                    <h3><a href="https://mix-me-react.herokuapp.com/">Mix-Me</a></h3>
+                    <h3 class="title"><a href="https://mix-me-react.herokuapp.com/">Mix-Me</a></h3>
                     <p> Mix me description</p>
                     <div>
                         <a href="https://mix-me-react.herokuapp.com/"><img class="project-image" src="./mix-me.png" /></a>
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3><a href="https://dakotahducharme.github.io/MemoryGame/">Memory Game</a></h3>
+                    <h3 class="title"><a href="https://dakotahducharme.github.io/MemoryGame/">Memory Game</a></h3>
                     <p> memory game description </p>
                         <div>
                             <a href="https://dakotahducharme.github.io/MemoryGame/">
@@ -39,7 +39,7 @@
                         </div>
                 </div> 
                 <div class="project-info">
-                    <h3><a href="https://dakotahducharme.github.io/Snowglobe/">Snowglobe</a></h3>
+                    <h3 class="title"><a href="https://dakotahducharme.github.io/Snowglobe/">Snowglobe</a></h3>
                     <p> snowglobe description </p>
                         <div>
                             <a href="https://dakotahducharme.github.io/Snowglobe/">
@@ -47,7 +47,7 @@
                         </div>
                 </div>
                 <div class="project-info">
-                    <h3><a href="https://dakotahducharme.github.io/p5-example/">Canvas of circles</a></h3>
+                    <h3 class="title"><a href="https://dakotahducharme.github.io/p5-example/">Canvas of circles</a></h3>
                     <p> p5 description </p>
                         <div>
                             <a href="https://dakotahducharme.github.io/p5-example/">
@@ -55,7 +55,7 @@
                         </div>
                 </div>
                 <div class="project-info">
-                    <h3><a href="https://pages.git.generalassemb.ly/dakotahducharme/project-one/index.html">Pokawaii</a></h3>
+                    <h3 class="title"><a href="https://pages.git.generalassemb.ly/dakotahducharme/project-one/index.html">Pokawaii</a></h3>
                     <p> pokawaii description </p>
                         <div>
                             <a href="https://pages.git.generalassemb.ly/dakotahducharme/project-one/index.html">
