--- a/about.html
+++ b/about.html
@@ -22,9 +22,7 @@
     </nav>
     <h1>About Me</h1>
     <div id="container">
-        <div class="bio" id="bio_pic" >
-            <img src="https://pbs.twimg.com/media/FHojO4lVkAEauw6?format=jpg&name=small" />
-        </div>
+        <div class="bio"><img id="bio_pic" src="https://pbs.twimg.com/media/FHojO4lVkAEauw6?format=jpg&name=small" /></div>
         <div class="bio" id="intro">
             <h3>Dakotah Ducharme</h3>
             <h4>they/them/theirs</h4>
@@ -35,7 +33,7 @@
                the drones to fly autonomously. Fast forward
             </p>
         </div>
-        <div class="bio">
+        <!-- <div class="bio" id="intro2">
              <p>
                 Go into a room to decide you didn't want to be in there anyway
                 Cough hairball on conveniently placed pants love me! meeeeouw for stare out the window. 
@@ -44,8 +42,14 @@
                 Meow all night one of these days i'm going to get that red dot, just you wait and see somehow manage to 
                 catch a bird but have no idea what to do next, so play with it until it dies of shock, and murf pratt 
                 </p>
-        </div>
+        </div> -->
     </div>
+    <!-- <div id="img-index">
+        <img src="spain3.jpeg" class="img-home" alt="spain" />
+         <img src="spain2.jpeg"  class="img-home"/>
+        <img src="spain1.jpeg" class="img-home" />
+        <img src="spain4.jpeg" class="img-home"> 
+    </div> -->
 
     <footer>
         made with ❤️ by Dakotah Ducharme
