--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <h1><a href="./index.html"> < dakotah ducharme /></a> </h1> 
+        <h1 id="nav-h1"><a href="./index.html"> < dakotah ducharme /></a> </h1> 
         <ul>
             <li><a href="./about.html">about</a></li>
             <li><a href="./projects.html">portfolio</a></li>
@@ -27,10 +27,13 @@
             <h3>Dakotah Ducharme</h3>
             <h4>they/them/theirs</h4>
             <p>
-               My name is Dakotah, and I'm a software engineer who's passionate about all things tech. While that may sound like the cliche
-               bio of every engineer, I really, truly, mean that. I began my engineering journey in high school, where I co-founded a 
+               My name is Dakotah, and I'm a software engineer who's passionate about all things tech. While that may sound like a cliche
+               I mean it genuinely! I began my engineering journey in high school, where I co-founded a 
                drone program with my friends. When we competed in drone competitions, we knew we could score extra points if we programmed
-               the drones to fly autonomously. Fast forward
+               the drones to fly autonomously. After realizing how satisfying it was to create and run scripts, I continued my education
+               in San Francisco, where I attended General Assmebly and received my certifcation in web development.</br></br></br>
+               In my spare time, I enjoy handmaking rugs, bothering my cat, and attending concerts. If you really want to get on my good side,
+               try talking to me about houseplants or video games.
             </p>
         </div>
         <!-- <div class="bio" id="intro2">
