--- a/experience.html
+++ b/experience.html
@@ -12,56 +12,47 @@
 </head>
 
 <body>
+    <nav>
+        <h1><a href="./index.html"> < dakotah ducharme /></a> </h1> 
+        <ul>
+            <li><a href="./about.html">about</a></li>
+            <li><a href="./projects.html">portfolio</a></li>
+            <li><a href="./experience.html">experience</a></li>
+        </ul>
+    </nav>
     <div class="container">
-        <nav>
-            <h1><a href="./index.html"> < dakotah ducharme /></a> </h1> 
-            <ul>
-                <li><a href="./about.html">about</a></li>
-                <li><a href="./projects.html">portfolio</a></li>
-                <li><a href="./experience.html">experience</a></li>
-            </ul>
-        </nav>
         <div id="prim-exp-container">
-            <h1>Industry Experience</h1>
-        
             <div id="exp-container">
+                <h1>Industry Experience</h1>
                 <div class="experience">
                     <h3>American Express</h3>
                     <h4>Software Engineer Apprentice</h4>
                     <h4>April 2022 - Present</h4>
                     <p>
-                    I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
-                    sustainability, and accessibility. In addition to software, I'm a big fan of vegan food, cute animals, 
-                    video games, and classic literature. I love to learn new skills, and take on new challenges. I'll
-                    definitely be guilty of trying to talk your ear off about my latest javascript project, or my current favorite metal album.
+                :)
                     </p>
                 </div>
                 <div class="experience">
                     <h3>University of California, Berkeley</h3>
                     <h4>Teaching Assistant</h4>
-                    <h4>July 2019-January 2020</h4>
+                    <h4>July 2019 - January 2020</h4>
                     <p>
-                        Go into a room to decide you didn't want to be in there anyway
-                        Cough hairball on conveniently placed pants love me! meeeeouw for stare out the window. 
-                        Cough hairball on conveniently placed pants cat walks in keyboard. 
-                        Weigh eight pounds but take up a full-size bed paw your face to wake you up in the morning. 
-                        Meow all night one of these days i'm going to get that red dot, just you wait and see somehow manage to 
-                        catch a bird but have no idea what to do next, so play with it until it dies of shock, and murf pratt 
+                        
                     </p>
                 </div>
             </div>
 
-            <h1>Education</h1>
             <div id="edu-container">
+                <h1>Education</h1>
                 <div class="education">
                     <h3>General Assembly</h3>
                     <h4>Software Engineering Bootcamp</h4>
                     <h4>December 2018 - March 2019</h4>
                     <p>
-                        I'm a software engineer currently based out of Phoenix, Arizona. I'm a team player with a passion for design,
-                        sustainability, and accessibility. In addition to software, I'm a big fan of vegan food, cute animals, 
-                        video games, and classic literature. I love to learn new skills, and take on new challenges. I'll
-                        definitely be guilty of trying to talk your ear off about my latest javascript project, or my current favorite metal album.
+                    At this three month immersive bootcamp, I learned programming fundamentals and deployed numerous
+                    projects that ultimately enhanced my understanding of full stack web development. I primarily
+                    learned the MERN stack, along with Ruby on Rails, python, and a handful of other languages. Examples
+                    of my student projects can be found under my portoflio tab.
                     </p>
                 </div>
                 <!-- <div class="experience">
@@ -79,6 +70,7 @@
                 </div> -->
             </div>
         </div>
+    </div>
         <footer>
             made with ❤️ by Dakotah Ducharme
             <ul>
